<resources>
    <string name="app_name">Recipe app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="search_text">Search</string>
    <string name="search_default_text">Search</string>
    <string name="no_movies_data">There are no movies to display.</string>
    <string name="no_internet">There is no internet connection.</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_account_yet">Do not have account yet?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>