<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:padding="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
           />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/limelight"
            android:padding="15dp"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@+id/login_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/username"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />


        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_username" />


        <TextView
            android:id="@+id/register_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerIntent"
            android:paddingTop="15dp"
            android:text="@string/do_not_have_account_yet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/to_movies_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="search for movies" />

</RelativeLayout>