<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="150dp"
>
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/icon"
            />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded"
        android:layout_marginTop="150dp"
        android:textColorHint="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/limelight"
                android:text="Registration"
                android:textColor="@color/black"
                android:textSize="45sp"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="15dp"

                />



            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"

                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias=".3"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".3"
                app:layout_constraintWidth_percent=".8" />


            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/password"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent=".8" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/button"
                app:layout_constraintVertical_bias=".7"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loginIntent"
                android:paddingTop="15dp"
                android:text="@string/already_have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/sign_up" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</RelativeLayout>